# fcnet

.github/workflows/: release.yml
fcnet/: Cargo.toml
fcnet-cli/: Cargo.toml
fcnet-types/: Cargo.toml
fcnet/src/: backend.rs  simple.rs  util.rs
fcnet/src/namespaced/: add.rs  check.rs  delete.rs  mod.rs
fcnetd/: Cargo.toml
fcnetd-client/: Cargo.toml
