[package]
name = "fcnet-cli"
version = "0.4.4"
edition = "2021"
description = "A Firecracker microVM networking solution: CLI wrapper."
license = "MIT"
keywords = ["firecracker", "microvm", "networking"]
categories = ["network-programming"]
repository = "https://github.com/rust-firecracker/fcnet"
readme = "README.md"

[dependencies]
cidr = "0.3.1"
clap = { version = "4.5.47", features = ["derive"] }
fcnet-types = { path = "../fcnet-types", version = "0.1.1" }
fcnet = { path = "../fcnet", version = "0.11.0", features = [
    "simple",
    "namespaced",
    "tokio-backend",
] }
tokio = { version = "1.47.1", features = ["rt"] }
