[package]
name = "fcnet"
version = "0.9.0"
edition = "2021"
description = "An in-process Firecracker microVM networking backend based on fcnet-types."
license = "MIT"
keywords = ["firecracker", "microvm", "networking"]
categories = ["network-programming"]
repository = "https://github.com/rust-firecracker/fcnet"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
fcnet-types = { path = "../fcnet-types", version = "0.1.1" }

futures-util = { version = "0.3.31", default-features = false }
futures-channel = { version = "0.3.31", default-features = false, optional = true }
rtnetlink = { version = "0.16.0", default-features = false }
netlink-sys = { version = "0.8.7", default-features = false }
netlink-proto = { version = "0.11.5", default-features = false }
netlink-packet-route = "0.22.0"
tokio-tun = "0.13.2"
cidr = "0.3.1"
nftables = "0.6.1"
nftables-async = "0.4.0"
serde_json = "1.0.140"

tokio = { version = "1.44.2", default-features = false, features = [
    "rt",
], optional = true }
async-executor = { version = "1.13.1", optional = true }
async-io = { version = "2.4.0", optional = true }

nix = { version = "0.29.0", optional = true, features = [
    "mount",
    "sched",
    "process",
], default-features = false }

[dev-dependencies]
fcnet = { path = ".", features = ["full"] }

[features]
default = ["simple"]
full = ["simple", "namespaced", "tokio-backend", "smol-backend"]
simple = ["fcnet-types/simple"]
namespaced = ["fcnet-types/namespaced", "dep:nix", "dep:futures-channel"]
tokio-backend = [
    "dep:tokio",
    "netlink-proto/tokio_socket",
    "nftables-async/tokio-driver",
]
smol-backend = [
    "dep:async-executor",
    "dep:async-io",
    "netlink-proto/smol_socket",
    "nftables-async/async-process-driver",
]
